Work on gradient boosting classifier

--- a/ml_baseball.ipynb
+++ b/ml_baseball.ipynb
@@ -1120,7 +1120,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 11,
    "source": [
     "len(X_train_scaled[0])"
    ],
@@ -1133,23 +1133,23 @@
       ]
      },
      "metadata": {},
-     "execution_count": 16
+     "execution_count": 11
     }
    ],
    "metadata": {}
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 12,
    "source": [
     "# Create a classifier object\r\n",
     "learning_rates = [0.05, 0.1, 0.25, 0.5, 0.75, 1]\r\n",
     "\r\n",
     "for learning_rate in learning_rates:\r\n",
     "    classifier = GradientBoostingClassifier(\r\n",
-    "        n_estimators = 40,\r\n",
+    "        n_estimators = 20,\r\n",
     "        learning_rate = learning_rate,\r\n",
-    "        max_features = 11,\r\n",
+    "        max_features = 5,\r\n",
     "        max_depth = 20,\r\n",
     "        random_state = yogi)\r\n",
     "    \r\n",
@@ -1173,7 +1173,38 @@
     "    print()\r\n",
     "\r\n"
    ],
-   "outputs": [],
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "Learning Rate: 0.05\n",
+      "Accuracy Score (training): 0.915\n",
+      "Accuracy Score (validation): 0.674\n",
+      "\n",
+      "Learning Rate: 0.1\n",
+      "Accuracy Score (training): 0.982\n",
+      "Accuracy Score (validation): 0.671\n",
+      "\n",
+      "Learning Rate: 0.25\n",
+      "Accuracy Score (training): 1.000\n",
+      "Accuracy Score (validation): 0.659\n",
+      "\n",
+      "Learning Rate: 0.5\n",
+      "Accuracy Score (training): 1.000\n",
+      "Accuracy Score (validation): 0.651\n",
+      "\n",
+      "Learning Rate: 0.75\n",
+      "Accuracy Score (training): 1.000\n",
+      "Accuracy Score (validation): 0.646\n",
+      "\n",
+      "Learning Rate: 1\n",
+      "Accuracy Score (training): 1.000\n",
+      "Accuracy Score (validation): 0.644\n",
+      "\n"
+     ]
+    }
+   ],
    "metadata": {}
   },
   {
@@ -1185,12 +1216,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "source": [
     "# Choose a learning rate and create classifiers\r\n",
     "classifier = GradientBoostingClassifier(\r\n",
     "    n_estimators = 40,\r\n",
-    "    learning_rate = ,\r\n",
+    "    learning_rate = .5,\r\n",
     "    max_features = 11,\r\n",
     "    max_depth = 3,\r\n",
     "    random_state = yogi\r\n",
@@ -1203,7 +1234,166 @@
     "predictions = classifier.predict(X_test_scaled)\r\n",
     "pd.DataFrame({'Prediction': predictions, 'Actual': y_test}).head(20)"
    ],
-   "outputs": [],
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "   Prediction Actual\n",
+       "0           S      S\n",
+       "1           B      B\n",
+       "2           S      S\n",
+       "3           B      B\n",
+       "4           S      X\n",
+       "5           B      X\n",
+       "6           B      S\n",
+       "7           S      S\n",
+       "8           S      X\n",
+       "9           B      X\n",
+       "10          B      B\n",
+       "11          B      S\n",
+       "12          S      X\n",
+       "13          X      S\n",
+       "14          S      S\n",
+       "15          S      S\n",
+       "16          S      S\n",
+       "17          B      S\n",
+       "18          S      S\n",
+       "19          B      B"
+      ],
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Prediction</th>\n",
+       "      <th>Actual</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>S</td>\n",
+       "      <td>S</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>B</td>\n",
+       "      <td>B</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>S</td>\n",
+       "      <td>S</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>B</td>\n",
+       "      <td>B</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>S</td>\n",
+       "      <td>X</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>B</td>\n",
+       "      <td>X</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>B</td>\n",
+       "      <td>S</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>S</td>\n",
+       "      <td>S</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>S</td>\n",
+       "      <td>X</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>B</td>\n",
+       "      <td>X</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>10</th>\n",
+       "      <td>B</td>\n",
+       "      <td>B</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>11</th>\n",
+       "      <td>B</td>\n",
+       "      <td>S</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>12</th>\n",
+       "      <td>S</td>\n",
+       "      <td>X</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>13</th>\n",
+       "      <td>X</td>\n",
+       "      <td>S</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>14</th>\n",
+       "      <td>S</td>\n",
+       "      <td>S</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>15</th>\n",
+       "      <td>S</td>\n",
+       "      <td>S</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>16</th>\n",
+       "      <td>S</td>\n",
+       "      <td>S</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>17</th>\n",
+       "      <td>B</td>\n",
+       "      <td>S</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>18</th>\n",
+       "      <td>S</td>\n",
+       "      <td>S</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>19</th>\n",
+       "      <td>B</td>\n",
+       "      <td>B</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 13
+    }
+   ],
    "metadata": {}
   },
   {
@@ -1215,29 +1405,97 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "source": [
     "# Calculating the accuracy score\r\n",
     "acc_score = accuracy_score(y_test, predictions)\r\n",
     "print(f'Accuracy Score: {acc_score}')"
    ],
-   "outputs": [],
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "Accuracy Score: 0.6801193324650937\n"
+     ]
+    }
+   ],
    "metadata": {}
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "source": [
     "# Generate confusion matrix\r\n",
     "cm = confusion_matrix(y_test, predictions)\r\n",
-    "cd_df = pd.DataFrame(\r\n",
+    "cm_df = pd.DataFrame(\r\n",
     "    cm\r\n",
     ")\r\n",
     "\r\n",
     "# Display confusion matrix\r\n",
     "display(cm_df)"
    ],
-   "outputs": [],
+   "outputs": [
+    {
+     "output_type": "display_data",
+     "data": {
+      "text/plain": [
+       "       0      1    2\n",
+       "0  23119   1271    1\n",
+       "1   8823  21610  198\n",
+       "2   2268   8562  182"
+      ],
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>0</th>\n",
+       "      <th>1</th>\n",
+       "      <th>2</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>23119</td>\n",
+       "      <td>1271</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>8823</td>\n",
+       "      <td>21610</td>\n",
+       "      <td>198</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>2268</td>\n",
+       "      <td>8562</td>\n",
+       "      <td>182</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ]
+     },
+     "metadata": {}
+    }
+   ],
    "metadata": {}
   },
   {
