Update code with date

--- a/ml_baseball_gradient_boost.ipynb
+++ b/ml_baseball_gradient_boost.ipynb
@@ -1307,6 +1307,22 @@
       "Learning Rate: 0.05\n",
       "Accuracy Score (training): 0.671\n",
       "Accuracy Score (validation): 0.672\n",
+      "\n",
+      "Learning Rate: 0.1\n",
+      "Accuracy Score (training): 0.671\n",
+      "Accuracy Score (validation): 0.672\n",
+      "\n",
+      "Learning Rate: 0.25\n",
+      "Accuracy Score (training): 0.671\n",
+      "Accuracy Score (validation): 0.672\n",
+      "\n",
+      "Learning Rate: 0.5\n",
+      "Accuracy Score (training): 0.671\n",
+      "Accuracy Score (validation): 0.672\n",
+      "\n",
+      "Learning Rate: 0.75\n",
+      "Accuracy Score (training): 0.671\n",
+      "Accuracy Score (validation): 0.672\n",
       "\n"
      ]
     }
@@ -1328,7 +1344,7 @@
     "classifier = GradientBoostingClassifier(\r\n",
     "    n_estimators = 20,\r\n",
     "    learning_rate = best_rate,\r\n",
-    "    max_features = 5,\r\n",
+    "    max_features = 7,\r\n",
     "    max_depth = 3,\r\n",
     "    random_state = yogi\r\n",
     ")\r\n",
