Convert game_date to datetime

--- a/baseball_cleaning.ipynb
+++ b/baseball_cleaning.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 11,
    "source": [
     "# Import dependencies\r\n",
     "import pandas as pd\r\n"
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 3,
    "source": [
     "# Read in data\r\n",
     "bb_2020_df = pd.read_csv('Data/Statcast/Statcast_2020.csv')\r\n",
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 4,
    "source": [
     "baseball_df = pd.concat([bb_2020_df, bb_2019_df, bb_2018_df, bb_2017_df])"
    ],
@@ -34,7 +34,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 5,
+   "source": [
+    "# Convert 'game_date' to datetime \r\n",
+    "baseball_df['game_date'] = pd.to_datetime(baseball_df['game_date'])"
+   ],
+   "outputs": [],
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
    "source": [
     "# Save necessary columns to new df\r\n",
     "pitch_df = baseball_df[['type', 'pitch_type', 'release_speed', 'effective_speed', 'release_spin_rate', 'release_pos_x', 'release_pos_z', 'zone', 'stand', 'p_throws', 'pitch_number', 'if_fielding_alignment', 'of_fielding_alignment', 'spin_axis']]"
@@ -44,7 +54,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 7,
    "source": [
     "# Check new df\r\n",
     "pitch_df.head(10)"
@@ -302,14 +312,14 @@
       ]
      },
      "metadata": {},
-     "execution_count": 49
+     "execution_count": 7
     }
    ],
    "metadata": {}
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 8,
    "source": [
     "# Drop columns with NAs \r\n",
     "pitch_df = pitch_df.dropna()"
@@ -319,18 +329,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 9,
    "source": [
     "# Export new df as csv file\r\n",
     "pitch_df.to_csv('Data/Saved/pitching_all.csv')"
    ],
-   "outputs": [],
-   "metadata": {}
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "source": [],
    "outputs": [],
    "metadata": {}
   }
