Add game_date to csv

--- a/baseball_cleaning.ipynb
+++ b/baseball_cleaning.ipynb
@@ -47,7 +47,7 @@
    "execution_count": 6,
    "source": [
     "# Save necessary columns to new df\r\n",
-    "pitch_df = baseball_df[['type', 'pitch_type', 'release_speed', 'effective_speed', 'release_spin_rate', 'release_pos_x', 'release_pos_z', 'zone', 'stand', 'p_throws', 'pitch_number', 'if_fielding_alignment', 'of_fielding_alignment', 'spin_axis']]"
+    "pitch_df = baseball_df[['game_date', 'type', 'pitch_type', 'release_speed', 'effective_speed', 'release_spin_rate', 'release_pos_x', 'release_pos_z', 'zone', 'stand', 'p_throws', 'pitch_number', 'if_fielding_alignment', 'of_fielding_alignment', 'spin_axis']]"
    ],
    "outputs": [],
    "metadata": {}
