Drop game_date from X features

--- a/ml_baseball_gradient_boost.ipynb
+++ b/ml_baseball_gradient_boost.ipynb
@@ -970,7 +970,7 @@
    "source": [
     "# Define features set\r\n",
     "X = df_pitch.copy()\r\n",
-    "X.drop(columns = ['type'], axis = 1, inplace = True)\r\n",
+    "X.drop(columns = [['type', 'game_date']], axis = 1, inplace = True)\r\n",
     "X.head()"
    ],
    "outputs": [
