--- a/pitcher_cleaning.ipynb
+++ b/pitcher_cleaning.ipynb
@@ -440,8 +440,378 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "id": "e7764ac4",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "pitch_df = pitcher_df[['pitch_type', 'release_speed', 'player_name', 'zone', 'game_type', 'stand', 'p_throws', \n",
+    "                       'type', 'balls', 'strikes', 'inning', 'effective_speed', 'release_spin_rate', \n",
+    "                       'release_extension', 'release_pos_y', 'pitch_number', 'pitch_name']]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "2de5ea71",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<bound method NDFrame.head of      pitch_type  release_speed    player_name  zone game_type stand p_throws  \\\n",
+       "0            KC           80.8  Bauer, Trevor  14.0         R     L        R   \n",
+       "1            KC           79.6  Bauer, Trevor  13.0         R     L        R   \n",
+       "2            KC           78.1  Bauer, Trevor   7.0         R     L        R   \n",
+       "3            SL           79.5  Bauer, Trevor   3.0         R     R        R   \n",
+       "4            KC           77.8  Bauer, Trevor  14.0         R     L        R   \n",
+       "...         ...            ...            ...   ...       ...   ...      ...   \n",
+       "1208         FF           96.1  Scherzer, Max   5.0         R     L        R   \n",
+       "1209         CU           79.7  Scherzer, Max   7.0         R     L        R   \n",
+       "1210         FF           96.7  Scherzer, Max   9.0         R     L        R   \n",
+       "1211         FF           96.1  Scherzer, Max  11.0         R     L        R   \n",
+       "1212         FF           95.3  Scherzer, Max  11.0         R     L        R   \n",
+       "\n",
+       "     type balls strikes inning  effective_speed  release_spin_rate  \\\n",
+       "0       S     0       2      8             80.1             2881.0   \n",
+       "1       S     0       1      8             79.1             2842.0   \n",
+       "2       S     0       0      8             77.6             2866.0   \n",
+       "3       X     0       0      8             79.2             2793.0   \n",
+       "4       S     1       2      8             77.2             3061.0   \n",
+       "...   ...   ...     ...    ...              ...                ...   \n",
+       "1208    X     2       2      1             96.3             2450.0   \n",
+       "1209    S     2       1      1             79.6             2846.0   \n",
+       "1210    S     2       0      1             96.4             2421.0   \n",
+       "1211    B     1       0      1             95.9             2477.0   \n",
+       "1212    B     0       0      1             95.7             2484.0   \n",
+       "\n",
+       "      release_extension  release_pos_y pitch_number       pitch_name  \n",
+       "0                   6.4          54.15            3    Knuckle Curve  \n",
+       "1                   6.2          54.26            2    Knuckle Curve  \n",
+       "2                   6.2          54.29            1    Knuckle Curve  \n",
+       "3                   6.2          54.30            1           Slider  \n",
+       "4                   6.4          54.12            4    Knuckle Curve  \n",
+       "...                 ...            ...          ...              ...  \n",
+       "1208                6.4          54.09            5  4-Seam Fastball  \n",
+       "1209                6.2          54.28            4        Curveball  \n",
+       "1210                6.2          54.29            3  4-Seam Fastball  \n",
+       "1211                6.1          54.38            2  4-Seam Fastball  \n",
+       "1212                6.3          54.21            1  4-Seam Fastball  \n",
+       "\n",
+       "[8711 rows x 17 columns]>"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "pitch_df.head"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "id": "e136c52a",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>pitch_type</th>\n",
+       "      <th>release_speed</th>\n",
+       "      <th>player_name</th>\n",
+       "      <th>zone</th>\n",
+       "      <th>game_type</th>\n",
+       "      <th>stand</th>\n",
+       "      <th>p_throws</th>\n",
+       "      <th>type</th>\n",
+       "      <th>balls</th>\n",
+       "      <th>strikes</th>\n",
+       "      <th>inning</th>\n",
+       "      <th>effective_speed</th>\n",
+       "      <th>release_spin_rate</th>\n",
+       "      <th>release_extension</th>\n",
+       "      <th>release_pos_y</th>\n",
+       "      <th>pitch_number</th>\n",
+       "      <th>pitch_name</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>KC</td>\n",
+       "      <td>80.8</td>\n",
+       "      <td>Bauer, Trevor</td>\n",
+       "      <td>14.0</td>\n",
+       "      <td>R</td>\n",
+       "      <td>L</td>\n",
+       "      <td>R</td>\n",
+       "      <td>S</td>\n",
+       "      <td>0</td>\n",
+       "      <td>2</td>\n",
+       "      <td>8</td>\n",
+       "      <td>80.1</td>\n",
+       "      <td>2881.0</td>\n",
+       "      <td>6.4</td>\n",
+       "      <td>54.15</td>\n",
+       "      <td>3</td>\n",
+       "      <td>Knuckle Curve</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>KC</td>\n",
+       "      <td>79.6</td>\n",
+       "      <td>Bauer, Trevor</td>\n",
+       "      <td>13.0</td>\n",
+       "      <td>R</td>\n",
+       "      <td>L</td>\n",
+       "      <td>R</td>\n",
+       "      <td>S</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>8</td>\n",
+       "      <td>79.1</td>\n",
+       "      <td>2842.0</td>\n",
+       "      <td>6.2</td>\n",
+       "      <td>54.26</td>\n",
+       "      <td>2</td>\n",
+       "      <td>Knuckle Curve</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>KC</td>\n",
+       "      <td>78.1</td>\n",
+       "      <td>Bauer, Trevor</td>\n",
+       "      <td>7.0</td>\n",
+       "      <td>R</td>\n",
+       "      <td>L</td>\n",
+       "      <td>R</td>\n",
+       "      <td>S</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>8</td>\n",
+       "      <td>77.6</td>\n",
+       "      <td>2866.0</td>\n",
+       "      <td>6.2</td>\n",
+       "      <td>54.29</td>\n",
+       "      <td>1</td>\n",
+       "      <td>Knuckle Curve</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>SL</td>\n",
+       "      <td>79.5</td>\n",
+       "      <td>Bauer, Trevor</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>R</td>\n",
+       "      <td>R</td>\n",
+       "      <td>R</td>\n",
+       "      <td>X</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>8</td>\n",
+       "      <td>79.2</td>\n",
+       "      <td>2793.0</td>\n",
+       "      <td>6.2</td>\n",
+       "      <td>54.30</td>\n",
+       "      <td>1</td>\n",
+       "      <td>Slider</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>KC</td>\n",
+       "      <td>77.8</td>\n",
+       "      <td>Bauer, Trevor</td>\n",
+       "      <td>14.0</td>\n",
+       "      <td>R</td>\n",
+       "      <td>L</td>\n",
+       "      <td>R</td>\n",
+       "      <td>S</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2</td>\n",
+       "      <td>8</td>\n",
+       "      <td>77.2</td>\n",
+       "      <td>3061.0</td>\n",
+       "      <td>6.4</td>\n",
+       "      <td>54.12</td>\n",
+       "      <td>4</td>\n",
+       "      <td>Knuckle Curve</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>SL</td>\n",
+       "      <td>77.7</td>\n",
+       "      <td>Bauer, Trevor</td>\n",
+       "      <td>4.0</td>\n",
+       "      <td>R</td>\n",
+       "      <td>L</td>\n",
+       "      <td>R</td>\n",
+       "      <td>S</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>8</td>\n",
+       "      <td>77.3</td>\n",
+       "      <td>2743.0</td>\n",
+       "      <td>6.1</td>\n",
+       "      <td>54.41</td>\n",
+       "      <td>3</td>\n",
+       "      <td>Slider</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>FF</td>\n",
+       "      <td>92.3</td>\n",
+       "      <td>Bauer, Trevor</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>R</td>\n",
+       "      <td>L</td>\n",
+       "      <td>R</td>\n",
+       "      <td>S</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>8</td>\n",
+       "      <td>92.0</td>\n",
+       "      <td>2605.0</td>\n",
+       "      <td>6.3</td>\n",
+       "      <td>54.23</td>\n",
+       "      <td>2</td>\n",
+       "      <td>4-Seam Fastball</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>SL</td>\n",
+       "      <td>77.9</td>\n",
+       "      <td>Bauer, Trevor</td>\n",
+       "      <td>8.0</td>\n",
+       "      <td>R</td>\n",
+       "      <td>L</td>\n",
+       "      <td>R</td>\n",
+       "      <td>B</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>8</td>\n",
+       "      <td>77.6</td>\n",
+       "      <td>2664.0</td>\n",
+       "      <td>6.2</td>\n",
+       "      <td>54.29</td>\n",
+       "      <td>1</td>\n",
+       "      <td>Slider</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>FF</td>\n",
+       "      <td>90.6</td>\n",
+       "      <td>Bauer, Trevor</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>R</td>\n",
+       "      <td>L</td>\n",
+       "      <td>R</td>\n",
+       "      <td>X</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>8</td>\n",
+       "      <td>90.6</td>\n",
+       "      <td>2604.0</td>\n",
+       "      <td>6.4</td>\n",
+       "      <td>54.11</td>\n",
+       "      <td>1</td>\n",
+       "      <td>4-Seam Fastball</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>SL</td>\n",
+       "      <td>79.4</td>\n",
+       "      <td>Bauer, Trevor</td>\n",
+       "      <td>8.0</td>\n",
+       "      <td>R</td>\n",
+       "      <td>R</td>\n",
+       "      <td>R</td>\n",
+       "      <td>X</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>7</td>\n",
+       "      <td>79.4</td>\n",
+       "      <td>2821.0</td>\n",
+       "      <td>6.3</td>\n",
+       "      <td>54.24</td>\n",
+       "      <td>3</td>\n",
+       "      <td>Slider</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "  pitch_type  release_speed    player_name  zone game_type stand p_throws  \\\n",
+       "0         KC           80.8  Bauer, Trevor  14.0         R     L        R   \n",
+       "1         KC           79.6  Bauer, Trevor  13.0         R     L        R   \n",
+       "2         KC           78.1  Bauer, Trevor   7.0         R     L        R   \n",
+       "3         SL           79.5  Bauer, Trevor   3.0         R     R        R   \n",
+       "4         KC           77.8  Bauer, Trevor  14.0         R     L        R   \n",
+       "5         SL           77.7  Bauer, Trevor   4.0         R     L        R   \n",
+       "6         FF           92.3  Bauer, Trevor   3.0         R     L        R   \n",
+       "7         SL           77.9  Bauer, Trevor   8.0         R     L        R   \n",
+       "8         FF           90.6  Bauer, Trevor   2.0         R     L        R   \n",
+       "9         SL           79.4  Bauer, Trevor   8.0         R     R        R   \n",
+       "\n",
+       "  type balls strikes inning  effective_speed  release_spin_rate  \\\n",
+       "0    S     0       2      8             80.1             2881.0   \n",
+       "1    S     0       1      8             79.1             2842.0   \n",
+       "2    S     0       0      8             77.6             2866.0   \n",
+       "3    X     0       0      8             79.2             2793.0   \n",
+       "4    S     1       2      8             77.2             3061.0   \n",
+       "5    S     1       1      8             77.3             2743.0   \n",
+       "6    S     1       0      8             92.0             2605.0   \n",
+       "7    B     0       0      8             77.6             2664.0   \n",
+       "8    X     0       0      8             90.6             2604.0   \n",
+       "9    X     1       1      7             79.4             2821.0   \n",
+       "\n",
+       "   release_extension  release_pos_y pitch_number       pitch_name  \n",
+       "0                6.4          54.15            3    Knuckle Curve  \n",
+       "1                6.2          54.26            2    Knuckle Curve  \n",
+       "2                6.2          54.29            1    Knuckle Curve  \n",
+       "3                6.2          54.30            1           Slider  \n",
+       "4                6.4          54.12            4    Knuckle Curve  \n",
+       "5                6.1          54.41            3           Slider  \n",
+       "6                6.3          54.23            2  4-Seam Fastball  \n",
+       "7                6.2          54.29            1           Slider  \n",
+       "8                6.4          54.11            1  4-Seam Fastball  \n",
+       "9                6.3          54.24            3           Slider  "
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "pitch_df.head(10)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "9d8ee462",
    "metadata": {},
    "outputs": [],
    "source": []
