--- a/pitcher_cleaning.ipynb
+++ b/pitcher_cleaning.ipynb
@@ -13,26 +13,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 23,
    "id": "86ec25d5",
    "metadata": {},
    "outputs": [],
    "source": [
     "# Read the data\n",
-    "bauer_df = pd.read_csv('bauer.csv')\n",
-    "bieber_df = pd.read_csv('bieber.csv')\n",
-    "buehler_df = pd.read_csv('buehler.csv')\n",
-    "cole_df = pd.read_csv('cole.csv')\n",
-    "degrom_df = pd.read_csv('degrom.csv')\n",
-    "kershaw_df = pd.read_csv('kershaw.csv')\n",
-    "lamet_df = pd.read_csv('lamet.csv')\n",
-    "nola_df = pd.read_csv('nola.csv')\n",
-    "scherzer_df = pd.read_csv('scherzer.csv')"
+    "bauer_df = pd.read_csv('Data/bauer.csv')\n",
+    "bieber_df = pd.read_csv('Data/bieber.csv')\n",
+    "buehler_df = pd.read_csv('Data/buehler.csv')\n",
+    "cole_df = pd.read_csv('Data/cole.csv')\n",
+    "degrom_df = pd.read_csv('Data/degrom.csv')\n",
+    "kershaw_df = pd.read_csv('Data/kershaw.csv')\n",
+    "lamet_df = pd.read_csv('Data/lamet.csv')\n",
+    "nola_df = pd.read_csv('Data/nola.csv')\n",
+    "scherzer_df = pd.read_csv('Data/scherzer.csv')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 24,
    "id": "627e662c",
    "metadata": {},
    "outputs": [],
@@ -42,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 25,
    "id": "5925712b",
    "metadata": {},
    "outputs": [
@@ -429,7 +429,7 @@
        "[8711 rows x 35 columns]"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -440,11 +440,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 26,
    "id": "e7764ac4",
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Save needed columns \n",
     "pitch_df = pitcher_df[['pitch_type', 'release_speed', 'player_name', 'zone', 'game_type', 'stand', 'p_throws', \n",
     "                       'type', 'balls', 'strikes', 'inning', 'effective_speed', 'release_spin_rate', \n",
     "                       'release_extension', 'release_pos_y', 'pitch_number', 'pitch_name']]"
@@ -452,7 +453,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 27,
    "id": "2de5ea71",
    "metadata": {},
    "outputs": [
@@ -501,7 +502,7 @@
        "[8711 rows x 17 columns]>"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -512,7 +513,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 30,
    "id": "e136c52a",
    "metadata": {},
    "outputs": [
@@ -757,60 +758,292 @@
        "      <td>3</td>\n",
        "      <td>Slider</td>\n",
        "    </tr>\n",
+       "    <tr>\n",
+       "      <th>10</th>\n",
+       "      <td>SL</td>\n",
+       "      <td>80.3</td>\n",
+       "      <td>Bauer, Trevor</td>\n",
+       "      <td>14.0</td>\n",
+       "      <td>R</td>\n",
+       "      <td>R</td>\n",
+       "      <td>R</td>\n",
+       "      <td>B</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>7</td>\n",
+       "      <td>80.5</td>\n",
+       "      <td>2828.0</td>\n",
+       "      <td>6.3</td>\n",
+       "      <td>54.24</td>\n",
+       "      <td>2</td>\n",
+       "      <td>Slider</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>11</th>\n",
+       "      <td>SL</td>\n",
+       "      <td>78.6</td>\n",
+       "      <td>Bauer, Trevor</td>\n",
+       "      <td>14.0</td>\n",
+       "      <td>R</td>\n",
+       "      <td>R</td>\n",
+       "      <td>R</td>\n",
+       "      <td>S</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>7</td>\n",
+       "      <td>78.6</td>\n",
+       "      <td>2777.0</td>\n",
+       "      <td>6.2</td>\n",
+       "      <td>54.26</td>\n",
+       "      <td>1</td>\n",
+       "      <td>Slider</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>12</th>\n",
+       "      <td>FF</td>\n",
+       "      <td>93.8</td>\n",
+       "      <td>Bauer, Trevor</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>R</td>\n",
+       "      <td>L</td>\n",
+       "      <td>R</td>\n",
+       "      <td>S</td>\n",
+       "      <td>3</td>\n",
+       "      <td>2</td>\n",
+       "      <td>7</td>\n",
+       "      <td>94.0</td>\n",
+       "      <td>2712.0</td>\n",
+       "      <td>6.3</td>\n",
+       "      <td>54.16</td>\n",
+       "      <td>6</td>\n",
+       "      <td>4-Seam Fastball</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>13</th>\n",
+       "      <td>FF</td>\n",
+       "      <td>92.8</td>\n",
+       "      <td>Bauer, Trevor</td>\n",
+       "      <td>11.0</td>\n",
+       "      <td>R</td>\n",
+       "      <td>L</td>\n",
+       "      <td>R</td>\n",
+       "      <td>B</td>\n",
+       "      <td>2</td>\n",
+       "      <td>2</td>\n",
+       "      <td>7</td>\n",
+       "      <td>92.9</td>\n",
+       "      <td>2793.0</td>\n",
+       "      <td>6.3</td>\n",
+       "      <td>54.16</td>\n",
+       "      <td>5</td>\n",
+       "      <td>4-Seam Fastball</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>14</th>\n",
+       "      <td>KC</td>\n",
+       "      <td>80.6</td>\n",
+       "      <td>Bauer, Trevor</td>\n",
+       "      <td>14.0</td>\n",
+       "      <td>R</td>\n",
+       "      <td>L</td>\n",
+       "      <td>R</td>\n",
+       "      <td>B</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2</td>\n",
+       "      <td>7</td>\n",
+       "      <td>79.6</td>\n",
+       "      <td>3074.0</td>\n",
+       "      <td>6.2</td>\n",
+       "      <td>54.26</td>\n",
+       "      <td>4</td>\n",
+       "      <td>Knuckle Curve</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>15</th>\n",
+       "      <td>KC</td>\n",
+       "      <td>78.1</td>\n",
+       "      <td>Bauer, Trevor</td>\n",
+       "      <td>13.0</td>\n",
+       "      <td>R</td>\n",
+       "      <td>L</td>\n",
+       "      <td>R</td>\n",
+       "      <td>S</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>7</td>\n",
+       "      <td>77.3</td>\n",
+       "      <td>2809.0</td>\n",
+       "      <td>6.2</td>\n",
+       "      <td>54.30</td>\n",
+       "      <td>3</td>\n",
+       "      <td>Knuckle Curve</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>16</th>\n",
+       "      <td>KC</td>\n",
+       "      <td>78.4</td>\n",
+       "      <td>Bauer, Trevor</td>\n",
+       "      <td>13.0</td>\n",
+       "      <td>R</td>\n",
+       "      <td>L</td>\n",
+       "      <td>R</td>\n",
+       "      <td>B</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>7</td>\n",
+       "      <td>77.9</td>\n",
+       "      <td>2761.0</td>\n",
+       "      <td>6.2</td>\n",
+       "      <td>54.26</td>\n",
+       "      <td>2</td>\n",
+       "      <td>Knuckle Curve</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>17</th>\n",
+       "      <td>SL</td>\n",
+       "      <td>79.3</td>\n",
+       "      <td>Bauer, Trevor</td>\n",
+       "      <td>8.0</td>\n",
+       "      <td>R</td>\n",
+       "      <td>L</td>\n",
+       "      <td>R</td>\n",
+       "      <td>S</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>7</td>\n",
+       "      <td>79.0</td>\n",
+       "      <td>2865.0</td>\n",
+       "      <td>6.1</td>\n",
+       "      <td>54.38</td>\n",
+       "      <td>1</td>\n",
+       "      <td>Slider</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>18</th>\n",
+       "      <td>SL</td>\n",
+       "      <td>80.2</td>\n",
+       "      <td>Bauer, Trevor</td>\n",
+       "      <td>14.0</td>\n",
+       "      <td>R</td>\n",
+       "      <td>R</td>\n",
+       "      <td>R</td>\n",
+       "      <td>X</td>\n",
+       "      <td>2</td>\n",
+       "      <td>2</td>\n",
+       "      <td>7</td>\n",
+       "      <td>80.2</td>\n",
+       "      <td>2903.0</td>\n",
+       "      <td>6.4</td>\n",
+       "      <td>54.14</td>\n",
+       "      <td>5</td>\n",
+       "      <td>Slider</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>19</th>\n",
+       "      <td>FF</td>\n",
+       "      <td>91.9</td>\n",
+       "      <td>Bauer, Trevor</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>R</td>\n",
+       "      <td>R</td>\n",
+       "      <td>R</td>\n",
+       "      <td>S</td>\n",
+       "      <td>2</td>\n",
+       "      <td>1</td>\n",
+       "      <td>7</td>\n",
+       "      <td>92.1</td>\n",
+       "      <td>2675.0</td>\n",
+       "      <td>6.4</td>\n",
+       "      <td>54.13</td>\n",
+       "      <td>4</td>\n",
+       "      <td>4-Seam Fastball</td>\n",
+       "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "  pitch_type  release_speed    player_name  zone game_type stand p_throws  \\\n",
-       "0         KC           80.8  Bauer, Trevor  14.0         R     L        R   \n",
-       "1         KC           79.6  Bauer, Trevor  13.0         R     L        R   \n",
-       "2         KC           78.1  Bauer, Trevor   7.0         R     L        R   \n",
-       "3         SL           79.5  Bauer, Trevor   3.0         R     R        R   \n",
-       "4         KC           77.8  Bauer, Trevor  14.0         R     L        R   \n",
-       "5         SL           77.7  Bauer, Trevor   4.0         R     L        R   \n",
-       "6         FF           92.3  Bauer, Trevor   3.0         R     L        R   \n",
-       "7         SL           77.9  Bauer, Trevor   8.0         R     L        R   \n",
-       "8         FF           90.6  Bauer, Trevor   2.0         R     L        R   \n",
-       "9         SL           79.4  Bauer, Trevor   8.0         R     R        R   \n",
+       "   pitch_type  release_speed    player_name  zone game_type stand p_throws  \\\n",
+       "0          KC           80.8  Bauer, Trevor  14.0         R     L        R   \n",
+       "1          KC           79.6  Bauer, Trevor  13.0         R     L        R   \n",
+       "2          KC           78.1  Bauer, Trevor   7.0         R     L        R   \n",
+       "3          SL           79.5  Bauer, Trevor   3.0         R     R        R   \n",
+       "4          KC           77.8  Bauer, Trevor  14.0         R     L        R   \n",
+       "5          SL           77.7  Bauer, Trevor   4.0         R     L        R   \n",
+       "6          FF           92.3  Bauer, Trevor   3.0         R     L        R   \n",
+       "7          SL           77.9  Bauer, Trevor   8.0         R     L        R   \n",
+       "8          FF           90.6  Bauer, Trevor   2.0         R     L        R   \n",
+       "9          SL           79.4  Bauer, Trevor   8.0         R     R        R   \n",
+       "10         SL           80.3  Bauer, Trevor  14.0         R     R        R   \n",
+       "11         SL           78.6  Bauer, Trevor  14.0         R     R        R   \n",
+       "12         FF           93.8  Bauer, Trevor   2.0         R     L        R   \n",
+       "13         FF           92.8  Bauer, Trevor  11.0         R     L        R   \n",
+       "14         KC           80.6  Bauer, Trevor  14.0         R     L        R   \n",
+       "15         KC           78.1  Bauer, Trevor  13.0         R     L        R   \n",
+       "16         KC           78.4  Bauer, Trevor  13.0         R     L        R   \n",
+       "17         SL           79.3  Bauer, Trevor   8.0         R     L        R   \n",
+       "18         SL           80.2  Bauer, Trevor  14.0         R     R        R   \n",
+       "19         FF           91.9  Bauer, Trevor   1.0         R     R        R   \n",
        "\n",
-       "  type balls strikes inning  effective_speed  release_spin_rate  \\\n",
-       "0    S     0       2      8             80.1             2881.0   \n",
-       "1    S     0       1      8             79.1             2842.0   \n",
-       "2    S     0       0      8             77.6             2866.0   \n",
-       "3    X     0       0      8             79.2             2793.0   \n",
-       "4    S     1       2      8             77.2             3061.0   \n",
-       "5    S     1       1      8             77.3             2743.0   \n",
-       "6    S     1       0      8             92.0             2605.0   \n",
-       "7    B     0       0      8             77.6             2664.0   \n",
-       "8    X     0       0      8             90.6             2604.0   \n",
-       "9    X     1       1      7             79.4             2821.0   \n",
+       "   type balls strikes inning  effective_speed  release_spin_rate  \\\n",
+       "0     S     0       2      8             80.1             2881.0   \n",
+       "1     S     0       1      8             79.1             2842.0   \n",
+       "2     S     0       0      8             77.6             2866.0   \n",
+       "3     X     0       0      8             79.2             2793.0   \n",
+       "4     S     1       2      8             77.2             3061.0   \n",
+       "5     S     1       1      8             77.3             2743.0   \n",
+       "6     S     1       0      8             92.0             2605.0   \n",
+       "7     B     0       0      8             77.6             2664.0   \n",
+       "8     X     0       0      8             90.6             2604.0   \n",
+       "9     X     1       1      7             79.4             2821.0   \n",
+       "10    B     0       1      7             80.5             2828.0   \n",
+       "11    S     0       0      7             78.6             2777.0   \n",
+       "12    S     3       2      7             94.0             2712.0   \n",
+       "13    B     2       2      7             92.9             2793.0   \n",
+       "14    B     1       2      7             79.6             3074.0   \n",
+       "15    S     1       1      7             77.3             2809.0   \n",
+       "16    B     0       1      7             77.9             2761.0   \n",
+       "17    S     0       0      7             79.0             2865.0   \n",
+       "18    X     2       2      7             80.2             2903.0   \n",
+       "19    S     2       1      7             92.1             2675.0   \n",
        "\n",
-       "   release_extension  release_pos_y pitch_number       pitch_name  \n",
-       "0                6.4          54.15            3    Knuckle Curve  \n",
-       "1                6.2          54.26            2    Knuckle Curve  \n",
-       "2                6.2          54.29            1    Knuckle Curve  \n",
-       "3                6.2          54.30            1           Slider  \n",
-       "4                6.4          54.12            4    Knuckle Curve  \n",
-       "5                6.1          54.41            3           Slider  \n",
-       "6                6.3          54.23            2  4-Seam Fastball  \n",
-       "7                6.2          54.29            1           Slider  \n",
-       "8                6.4          54.11            1  4-Seam Fastball  \n",
-       "9                6.3          54.24            3           Slider  "
+       "    release_extension  release_pos_y pitch_number       pitch_name  \n",
+       "0                 6.4          54.15            3    Knuckle Curve  \n",
+       "1                 6.2          54.26            2    Knuckle Curve  \n",
+       "2                 6.2          54.29            1    Knuckle Curve  \n",
+       "3                 6.2          54.30            1           Slider  \n",
+       "4                 6.4          54.12            4    Knuckle Curve  \n",
+       "5                 6.1          54.41            3           Slider  \n",
+       "6                 6.3          54.23            2  4-Seam Fastball  \n",
+       "7                 6.2          54.29            1           Slider  \n",
+       "8                 6.4          54.11            1  4-Seam Fastball  \n",
+       "9                 6.3          54.24            3           Slider  \n",
+       "10                6.3          54.24            2           Slider  \n",
+       "11                6.2          54.26            1           Slider  \n",
+       "12                6.3          54.16            6  4-Seam Fastball  \n",
+       "13                6.3          54.16            5  4-Seam Fastball  \n",
+       "14                6.2          54.26            4    Knuckle Curve  \n",
+       "15                6.2          54.30            3    Knuckle Curve  \n",
+       "16                6.2          54.26            2    Knuckle Curve  \n",
+       "17                6.1          54.38            1           Slider  \n",
+       "18                6.4          54.14            5           Slider  \n",
+       "19                6.4          54.13            4  4-Seam Fastball  "
       ]
      },
-     "execution_count": 14,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "pitch_df.head(10)"
+    "# Drop NA's\n",
+    "pitch_df = pitch_df.dropna()\n",
+    "pitch_df.head(20)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 29,
    "id": "9d8ee462",
    "metadata": {},
    "outputs": [],
