--- a/MLB_Statcast_2020.ipynb
+++ b/MLB_Statcast_2020.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -49,12 +49,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
-    "statcast_df = pd.read_csv('Statcast_2020.csv')\n",
-    "batters_df = pd.read_csv('batter_names.csv')"
+    "statcast_df = pd.read_csv('Data/Statcast_2020.csv')\n",
+    "batters_df = pd.read_csv('Data/batter_names.csv')"
    ]
   },
   {
