L and R pitchers in cleaning notebook

--- a/Data Cleaning.ipynb
+++ b/Data Cleaning.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "id": "7c6d22d3",
    "metadata": {},
    "outputs": [],
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "id": "3b094d59",
    "metadata": {},
    "outputs": [
@@ -218,14 +218,14 @@
        "[5 rows x 34 columns]"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "df = pd.read_csv('Statcast_2020.csv')\n",
-    "df19 = pd.read_csv('Resources/Statcast_2019.csv')\n",
+    "df19 = pd.read_csv('Statcast_2019.csv')\n",
     "\n",
     "df_merge = df.append(df19)\n",
     "df_clean = df_merge[['pitch_type','release_speed','release_pos_x','release_pos_z','player_name','zone','game_type','stand','p_throws','type','balls','strikes','pfx_x','pfx_z','plate_x','plate_z','inning','vx0','vy0','ax','ay','az','sz_top','sz_bot','effective_speed','release_spin_rate','release_extension','release_pos_y','at_bat_number','pitch_number','pitch_name','spin_axis','delta_home_win_exp','delta_run_exp']]\n",
@@ -251,11 +251,14 @@
    ]
   },
   {
-   "cell_type": "raw",
-   "id": "e58c162f",
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "cfea9d03",
    "metadata": {},
+   "outputs": [],
    "source": [
-    "pd.to_csv(df_cole)"
+    "df_r = df_clean[df_clean['p_throws'] == 'R']\n",
+    "df_l = df_clean[df_clean['p_throws'] == 'L']"
    ]
   },
   {
@@ -282,19 +285,11 @@
    "execution_count": 8,
    "id": "0991e443",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "997220"
-      ]
-     },
-     "execution_count": 8,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": []
+   "outputs": [],
+   "source": [
+    "df_l.to_csv('resources/l.csv')\n",
+    "df_r.to_csv('resources/r.csv')"
+   ]
   },
   {
    "cell_type": "code",
