Dataframe by teams

--- a/Data Cleaning.ipynb
+++ b/Data Cleaning.ipynb
@@ -224,8 +224,12 @@
     }
    ],
    "source": [
+    "# Read in Csvs\n",
+    "\n",
     "df = pd.read_csv('Statcast_2020.csv')\n",
     "df19 = pd.read_csv('Statcast_2019.csv')\n",
+    "\n",
+    "# Merge years and picks columns\n",
     "\n",
     "df_merge = df.append(df19)\n",
     "df_clean = df_merge[['pitch_type','release_speed','release_pos_x','release_pos_z','player_name','zone','game_type','stand','p_throws','type','balls','strikes','pfx_x','pfx_z','plate_x','plate_z','inning','vx0','vy0','ax','ay','az','sz_top','sz_bot','effective_speed','release_spin_rate','release_extension','release_pos_y','at_bat_number','pitch_number','pitch_name','spin_axis','delta_home_win_exp','delta_run_exp']]\n",
@@ -239,6 +243,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Create Top Pitcher Databases\n",
+    "\n",
     "df_cole = df_clean[df_clean['player_name'] == 'Cole, Gerrit']\n",
     "df_degrom = df_clean[df_clean['player_name'] == 'DeGrom, Jacob']\n",
     "df_scherzer = df_clean[df_clean['player_name'] == 'Scherzer, Max']\n",
@@ -257,6 +263,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Create L and R Handed Databases\n",
+    "\n",
     "df_r = df_clean[df_clean['p_throws'] == 'R']\n",
     "df_l = df_clean[df_clean['p_throws'] == 'L']"
    ]
@@ -268,7 +276,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "file_path = ('resources')\n",
+    "# Save Top Pitcher Databases\n",
+    "\n",
     "df_cole.to_csv('resources/cole.csv')\n",
     "df_degrom.to_csv('resources/degrom.csv')\n",
     "df_scherzer.to_csv('resources/scherzer.csv')\n",
@@ -287,14 +296,425 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Save L and R Handed Pitcher Databases\n",
     "df_l.to_csv('resources/l.csv')\n",
     "df_r.to_csv('resources/r.csv')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 43,
    "id": "12a9fb8e",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>pitch_type</th>\n",
+       "      <th>release_speed</th>\n",
+       "      <th>release_pos_x</th>\n",
+       "      <th>release_pos_z</th>\n",
+       "      <th>player_name</th>\n",
+       "      <th>zone</th>\n",
+       "      <th>game_type</th>\n",
+       "      <th>stand</th>\n",
+       "      <th>p_throws</th>\n",
+       "      <th>type</th>\n",
+       "      <th>...</th>\n",
+       "      <th>release_spin_rate</th>\n",
+       "      <th>release_extension</th>\n",
+       "      <th>release_pos_y</th>\n",
+       "      <th>at_bat_number</th>\n",
+       "      <th>pitch_number</th>\n",
+       "      <th>pitch_name</th>\n",
+       "      <th>spin_axis</th>\n",
+       "      <th>delta_home_win_exp</th>\n",
+       "      <th>delta_run_exp</th>\n",
+       "      <th>team</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>37703</th>\n",
+       "      <td>FF</td>\n",
+       "      <td>92.5</td>\n",
+       "      <td>-1.44</td>\n",
+       "      <td>5.56</td>\n",
+       "      <td>Javier, Cristian</td>\n",
+       "      <td>11.0</td>\n",
+       "      <td>R</td>\n",
+       "      <td>L</td>\n",
+       "      <td>R</td>\n",
+       "      <td>S</td>\n",
+       "      <td>...</td>\n",
+       "      <td>2278.0</td>\n",
+       "      <td>6.0</td>\n",
+       "      <td>54.49</td>\n",
+       "      <td>19</td>\n",
+       "      <td>4</td>\n",
+       "      <td>4-Seam Fastball</td>\n",
+       "      <td>202.0</td>\n",
+       "      <td>0.000</td>\n",
+       "      <td>0.000</td>\n",
+       "      <td>ARI</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>30524</th>\n",
+       "      <td>CU</td>\n",
+       "      <td>75.5</td>\n",
+       "      <td>2.47</td>\n",
+       "      <td>5.62</td>\n",
+       "      <td>Erlin, Robbie</td>\n",
+       "      <td>12.0</td>\n",
+       "      <td>R</td>\n",
+       "      <td>R</td>\n",
+       "      <td>L</td>\n",
+       "      <td>S</td>\n",
+       "      <td>...</td>\n",
+       "      <td>2631.0</td>\n",
+       "      <td>5.9</td>\n",
+       "      <td>54.64</td>\n",
+       "      <td>39</td>\n",
+       "      <td>5</td>\n",
+       "      <td>Curveball</td>\n",
+       "      <td>332.0</td>\n",
+       "      <td>0.000</td>\n",
+       "      <td>0.000</td>\n",
+       "      <td>ARI</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>30525</th>\n",
+       "      <td>FF</td>\n",
+       "      <td>90.1</td>\n",
+       "      <td>2.40</td>\n",
+       "      <td>5.74</td>\n",
+       "      <td>Erlin, Robbie</td>\n",
+       "      <td>12.0</td>\n",
+       "      <td>R</td>\n",
+       "      <td>R</td>\n",
+       "      <td>L</td>\n",
+       "      <td>B</td>\n",
+       "      <td>...</td>\n",
+       "      <td>2500.0</td>\n",
+       "      <td>6.0</td>\n",
+       "      <td>54.54</td>\n",
+       "      <td>39</td>\n",
+       "      <td>4</td>\n",
+       "      <td>4-Seam Fastball</td>\n",
+       "      <td>162.0</td>\n",
+       "      <td>0.000</td>\n",
+       "      <td>0.060</td>\n",
+       "      <td>ARI</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>30526</th>\n",
+       "      <td>CU</td>\n",
+       "      <td>75.9</td>\n",
+       "      <td>2.52</td>\n",
+       "      <td>5.49</td>\n",
+       "      <td>Erlin, Robbie</td>\n",
+       "      <td>8.0</td>\n",
+       "      <td>R</td>\n",
+       "      <td>R</td>\n",
+       "      <td>L</td>\n",
+       "      <td>S</td>\n",
+       "      <td>...</td>\n",
+       "      <td>2688.0</td>\n",
+       "      <td>6.0</td>\n",
+       "      <td>54.53</td>\n",
+       "      <td>39</td>\n",
+       "      <td>3</td>\n",
+       "      <td>Curveball</td>\n",
+       "      <td>336.0</td>\n",
+       "      <td>0.000</td>\n",
+       "      <td>-0.078</td>\n",
+       "      <td>ARI</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>30527</th>\n",
+       "      <td>FT</td>\n",
+       "      <td>90.2</td>\n",
+       "      <td>2.60</td>\n",
+       "      <td>5.59</td>\n",
+       "      <td>Erlin, Robbie</td>\n",
+       "      <td>12.0</td>\n",
+       "      <td>R</td>\n",
+       "      <td>R</td>\n",
+       "      <td>L</td>\n",
+       "      <td>B</td>\n",
+       "      <td>...</td>\n",
+       "      <td>2241.0</td>\n",
+       "      <td>6.2</td>\n",
+       "      <td>54.28</td>\n",
+       "      <td>39</td>\n",
+       "      <td>2</td>\n",
+       "      <td>2-Seam Fastball</td>\n",
+       "      <td>136.0</td>\n",
+       "      <td>0.000</td>\n",
+       "      <td>0.030</td>\n",
+       "      <td>ARI</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>103985</th>\n",
+       "      <td>CU</td>\n",
+       "      <td>77.0</td>\n",
+       "      <td>3.34</td>\n",
+       "      <td>5.55</td>\n",
+       "      <td>Dayton, Grant</td>\n",
+       "      <td>13.0</td>\n",
+       "      <td>R</td>\n",
+       "      <td>R</td>\n",
+       "      <td>L</td>\n",
+       "      <td>B</td>\n",
+       "      <td>...</td>\n",
+       "      <td>2523.0</td>\n",
+       "      <td>6.6</td>\n",
+       "      <td>53.91</td>\n",
+       "      <td>47</td>\n",
+       "      <td>10</td>\n",
+       "      <td>Curveball</td>\n",
+       "      <td>337.0</td>\n",
+       "      <td>0.000</td>\n",
+       "      <td>0.060</td>\n",
+       "      <td>WSH</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>103986</th>\n",
+       "      <td>FF</td>\n",
+       "      <td>92.2</td>\n",
+       "      <td>3.30</td>\n",
+       "      <td>5.57</td>\n",
+       "      <td>Dayton, Grant</td>\n",
+       "      <td>12.0</td>\n",
+       "      <td>R</td>\n",
+       "      <td>R</td>\n",
+       "      <td>L</td>\n",
+       "      <td>S</td>\n",
+       "      <td>...</td>\n",
+       "      <td>2279.0</td>\n",
+       "      <td>7.3</td>\n",
+       "      <td>53.20</td>\n",
+       "      <td>47</td>\n",
+       "      <td>9</td>\n",
+       "      <td>4-Seam Fastball</td>\n",
+       "      <td>143.0</td>\n",
+       "      <td>0.000</td>\n",
+       "      <td>0.000</td>\n",
+       "      <td>WSH</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>103987</th>\n",
+       "      <td>FF</td>\n",
+       "      <td>91.7</td>\n",
+       "      <td>3.30</td>\n",
+       "      <td>5.65</td>\n",
+       "      <td>Dayton, Grant</td>\n",
+       "      <td>12.0</td>\n",
+       "      <td>R</td>\n",
+       "      <td>R</td>\n",
+       "      <td>L</td>\n",
+       "      <td>S</td>\n",
+       "      <td>...</td>\n",
+       "      <td>2281.0</td>\n",
+       "      <td>6.5</td>\n",
+       "      <td>54.01</td>\n",
+       "      <td>47</td>\n",
+       "      <td>8</td>\n",
+       "      <td>4-Seam Fastball</td>\n",
+       "      <td>148.0</td>\n",
+       "      <td>0.000</td>\n",
+       "      <td>0.000</td>\n",
+       "      <td>WSH</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>103968</th>\n",
+       "      <td>SL</td>\n",
+       "      <td>82.0</td>\n",
+       "      <td>2.21</td>\n",
+       "      <td>6.32</td>\n",
+       "      <td>Smith, Will</td>\n",
+       "      <td>13.0</td>\n",
+       "      <td>R</td>\n",
+       "      <td>L</td>\n",
+       "      <td>L</td>\n",
+       "      <td>B</td>\n",
+       "      <td>...</td>\n",
+       "      <td>2340.0</td>\n",
+       "      <td>6.4</td>\n",
+       "      <td>54.12</td>\n",
+       "      <td>53</td>\n",
+       "      <td>1</td>\n",
+       "      <td>Slider</td>\n",
+       "      <td>311.0</td>\n",
+       "      <td>0.000</td>\n",
+       "      <td>0.041</td>\n",
+       "      <td>WSH</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>33708</th>\n",
+       "      <td>SL</td>\n",
+       "      <td>87.8</td>\n",
+       "      <td>-1.96</td>\n",
+       "      <td>6.04</td>\n",
+       "      <td>Alcantara, Sandy</td>\n",
+       "      <td>14.0</td>\n",
+       "      <td>R</td>\n",
+       "      <td>R</td>\n",
+       "      <td>R</td>\n",
+       "      <td>X</td>\n",
+       "      <td>...</td>\n",
+       "      <td>2419.0</td>\n",
+       "      <td>5.9</td>\n",
+       "      <td>54.57</td>\n",
+       "      <td>45</td>\n",
+       "      <td>3</td>\n",
+       "      <td>Slider</td>\n",
+       "      <td>30.0</td>\n",
+       "      <td>0.079</td>\n",
+       "      <td>-0.205</td>\n",
+       "      <td>WSH</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>1008754 rows × 35 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "       pitch_type  release_speed  release_pos_x  release_pos_z  \\\n",
+       "37703          FF           92.5          -1.44           5.56   \n",
+       "30524          CU           75.5           2.47           5.62   \n",
+       "30525          FF           90.1           2.40           5.74   \n",
+       "30526          CU           75.9           2.52           5.49   \n",
+       "30527          FT           90.2           2.60           5.59   \n",
+       "...           ...            ...            ...            ...   \n",
+       "103985         CU           77.0           3.34           5.55   \n",
+       "103986         FF           92.2           3.30           5.57   \n",
+       "103987         FF           91.7           3.30           5.65   \n",
+       "103968         SL           82.0           2.21           6.32   \n",
+       "33708          SL           87.8          -1.96           6.04   \n",
+       "\n",
+       "             player_name  zone game_type stand p_throws type  ...  \\\n",
+       "37703   Javier, Cristian  11.0         R     L        R    S  ...   \n",
+       "30524      Erlin, Robbie  12.0         R     R        L    S  ...   \n",
+       "30525      Erlin, Robbie  12.0         R     R        L    B  ...   \n",
+       "30526      Erlin, Robbie   8.0         R     R        L    S  ...   \n",
+       "30527      Erlin, Robbie  12.0         R     R        L    B  ...   \n",
+       "...                  ...   ...       ...   ...      ...  ...  ...   \n",
+       "103985     Dayton, Grant  13.0         R     R        L    B  ...   \n",
+       "103986     Dayton, Grant  12.0         R     R        L    S  ...   \n",
+       "103987     Dayton, Grant  12.0         R     R        L    S  ...   \n",
+       "103968       Smith, Will  13.0         R     L        L    B  ...   \n",
+       "33708   Alcantara, Sandy  14.0         R     R        R    X  ...   \n",
+       "\n",
+       "        release_spin_rate  release_extension  release_pos_y  at_bat_number  \\\n",
+       "37703              2278.0                6.0          54.49             19   \n",
+       "30524              2631.0                5.9          54.64             39   \n",
+       "30525              2500.0                6.0          54.54             39   \n",
+       "30526              2688.0                6.0          54.53             39   \n",
+       "30527              2241.0                6.2          54.28             39   \n",
+       "...                   ...                ...            ...            ...   \n",
+       "103985             2523.0                6.6          53.91             47   \n",
+       "103986             2279.0                7.3          53.20             47   \n",
+       "103987             2281.0                6.5          54.01             47   \n",
+       "103968             2340.0                6.4          54.12             53   \n",
+       "33708              2419.0                5.9          54.57             45   \n",
+       "\n",
+       "        pitch_number       pitch_name  spin_axis  delta_home_win_exp  \\\n",
+       "37703              4  4-Seam Fastball      202.0               0.000   \n",
+       "30524              5        Curveball      332.0               0.000   \n",
+       "30525              4  4-Seam Fastball      162.0               0.000   \n",
+       "30526              3        Curveball      336.0               0.000   \n",
+       "30527              2  2-Seam Fastball      136.0               0.000   \n",
+       "...              ...              ...        ...                 ...   \n",
+       "103985            10        Curveball      337.0               0.000   \n",
+       "103986             9  4-Seam Fastball      143.0               0.000   \n",
+       "103987             8  4-Seam Fastball      148.0               0.000   \n",
+       "103968             1           Slider      311.0               0.000   \n",
+       "33708              3           Slider       30.0               0.079   \n",
+       "\n",
+       "        delta_run_exp  team  \n",
+       "37703           0.000   ARI  \n",
+       "30524           0.000   ARI  \n",
+       "30525           0.060   ARI  \n",
+       "30526          -0.078   ARI  \n",
+       "30527           0.030   ARI  \n",
+       "...               ...   ...  \n",
+       "103985          0.060   WSH  \n",
+       "103986          0.000   WSH  \n",
+       "103987          0.000   WSH  \n",
+       "103968          0.041   WSH  \n",
+       "33708          -0.205   WSH  \n",
+       "\n",
+       "[1008754 rows x 35 columns]"
+      ]
+     },
+     "execution_count": 43,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#Create database sorted by team\n",
+    "df_teams = df_merge[['inning_topbot','home_team','away_team','pitch_type','release_speed','release_pos_x','release_pos_z','player_name','zone','game_type','stand','p_throws','type','balls','strikes','pfx_x','pfx_z','plate_x','plate_z','inning','vx0','vy0','ax','ay','az','sz_top','sz_bot','effective_speed','release_spin_rate','release_extension','release_pos_y','at_bat_number','pitch_number','pitch_name','spin_axis','delta_home_win_exp','delta_run_exp']]\n",
+    "df_top = df_teams[df_teams['inning_topbot']== 'Top']\n",
+    "df_bottom = df_teams[df_teams['inning_topbot']== 'Bottom']\n",
+    "df_hometeam = df_top.drop(columns = ['away_team','inning_topbot'])\n",
+    "df_awayteam = df_top.drop(columns = ['home_team','inning_topbot'])\n",
+    "df_hometeam['team'] = df_hometeam['home_team']\n",
+    "df_awayteam['team'] = df_awayteam['away_team']\n",
+    "df_teams = df_hometeam.append(df_awayteam)\n",
+    "df_teams = df_teams[df_teams['pitch_type'].isnull() == False]\n",
+    "df_teams = df_teams.drop(columns = ['home_team','away_team'])\n",
+    "df_teams = df_teams.sort_values('team')\n",
+    "df_teams"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "fb237bc1",
    "metadata": {},
    "outputs": [],
    "source": []
