DataFrame by teams

--- a/Data Cleaning.ipynb
+++ b/Data Cleaning.ipynb
@@ -714,10 +714,12 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "fb237bc1",
+   "id": "6346a9f5",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "df_teams.to_csv('resources/team.csv')"
+   ]
   }
  ],
  "metadata": {
