--- a/baseball_cleaning.ipynb
+++ b/baseball_cleaning.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 1,
    "source": [
     "# Import dependencies\r\n",
     "import pandas as pd\r\n"
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "source": [
     "# Read in data\r\n",
     "bb_2020_df = pd.read_csv('Data/Statcast/Statcast_2020.csv')\r\n",
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "source": [
     "baseball_df = pd.concat([bb_2020_df, bb_2019_df, bb_2018_df, bb_2017_df])"
    ],
@@ -333,6 +333,15 @@
    "source": [
     "# Export new df as csv file\r\n",
     "pitch_df.to_csv('Data/Saved/pitching_all.csv')"
+   ],
+   "outputs": [],
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "source": [
+    "# baseball_df['year'] = pd.DatetimeIndex(baseball_df['game_date']).year"
    ],
    "outputs": [],
    "metadata": {}
