--- a/ml_baseball_gradient_boost.ipynb
+++ b/ml_baseball_gradient_boost.ipynb
@@ -1231,7 +1231,7 @@
    "execution_count": 95,
    "source": [
     "# Split the data into training and testing sets\r\n",
-    "X_train, X_test, y_train, y_test = train_test_split(X, y, random_state = yogi, stratify = y)"
+    "X_train, X_test, y_train, y_test = train_test_split(X, y, random_ytate = yogi, stratify = y)"
    ],
    "outputs": [],
    "metadata": {}
